# pymsgkit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  verify_msg_files.py
examples/: basic_email.py  batch_generation.py  ediscovery_reconstruction.py  email_thread.py  html_email.py
pymsgkit/: __init__.py  cfb.py  properties.py  types.py  writer.py
tests/: test_basic.py
